<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">HealthCare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analysis">Analysis</string>

    <string name="_9478455897">9478455897</string>
    <string name="xyzheathcare_gmail_com">XYZHeathcare@gmail.com</string>
    <string name="description">description</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network Error</string>
    <string name="news">NEWS</string>
    <string name="total_infected">Total Infected</string>
    <string name="region_name">Region Name</string>
    <string name="_25000">25000</string>
    <string name="_21_21_2020">21/21/2020</string>
    <string name="have_you_checked_india_s_stats">Have You Checked India\'s Stats ?</string>
    <string name="total_confirmed">Total Confirmed :</string>
    <string name="_2020">2020</string>
    <string name="today_s_increase">Today\'s Increase :</string>
    <string name="_20">+20</string>
    <string name="checkout_latest_news_here">Checkout Latest News Here</string>
    <string name="latest_news">Latest News</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="corona_positive">CORONA POSITIVE</string>
    <string name="corona_negative">CORONA NEGATIVE</string>
    <string name="your_name">Your Name</string>
    <string name="amount_donated">Amount Donated</string>
    <string name="_125">125</string>
    <string name="amount_received">Amount Received</string>
    <string name="_1205">1205</string>
    <string name="add_your_address">Add your address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="get_code">Get Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="mapbox_access_token" tools:ignore="TypographyDashes">pk.eyJ1IjoiamF5YW50Z29lbDAwMSIsImEiOiJjazU5d2NqcmoxMTY0M2ZsajlqaHhubThtIn0.1_2GclqHSeQYaCg1B4-3VA</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="log_in_sign_up">Log In/Sign Up</string>
    <string name="name">Name</string>
</resources>
