<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Analysis">

    <LinearLayout
        android:id="@+id/retry_box_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/retry_bg"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/network_error"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView_analysis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/error" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/container_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.Toolbar>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_analysis_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="20dp" />

                <RelativeLayout
                    android:id="@+id/relative_layout_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_dialog_pink">

                    <ImageView
                        android:id="@+id/cross"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/description"
                        android:elevation="5dp"
                        android:src="@drawable/ic_close_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="Want medical help help or feel like following symptoms :\n\n  1.  Coughing\n  2.  Fever\n  3.  Body Ache"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="HardcodedText" />


                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/have_you_checked_india_s_stats"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/total_confirmed"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/total_conf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/_2020"
                        android:textColor="@color/red"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_weight="2"
                        android:gravity="start"
                        android:text="@string/today_s_increase"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/todays_inc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/_20"
                        android:textColor="@color/red"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/checkout_latest_news_here"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="2dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/black"
                    android:drawableStart="@drawable/book"
                    android:drawablePadding="10dp"
                    android:fitsSystemWindows="true"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scaleType="centerCrop"
                    android:text="@string/latest_news"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_collapseMode="parallax" />

            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="top"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.nanbox.parallaxrecyclerview.ParallaxRecyclerView
        android:id="@+id/recyclerView_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ede7df"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <ProgressBar
        android:id="@+id/progressBar_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>