<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:elevation="0dp"
    tools:context=".LoginAct">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        android:elevation="3dp"
        android:src="@drawable/orange_circle" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-180dp"
        android:layout_marginEnd="-140dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        android:elevation="5dp"
        android:src="@drawable/pink_circle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20dp"
        android:text="Stay Updated, Stay Notified"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/call" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:importantForAutofill="no"
                android:textColorHint="#888"
                app:boxBackgroundMode="outline"
                app:boxCollapsedPaddingTop="2dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textSize="20dp"
                    tools:ignore="RtlSymmetry,SpUsage" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="NotSibling">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/otp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:textColorHint="#888"
                app:boxBackgroundMode="outline"
                app:boxCollapsedPaddingTop="2dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    android:inputType="number"
                    android:paddingStart="15dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textSize="20dp"
                    tools:ignore="RtlSymmetry,SpUsage" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="-20dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/otp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/progressBar3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_log_bg"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/getCode"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/progressBar3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_log_bg"
        android:elevation="0dp"
        android:text="@string/get_code"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>

